--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-particles": "^2.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
-    "react-spring": "^9.6.1"
+    "react-spring": "^9.6.1",
+    "tsparticles": "^2.7.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.4.3",
+    "@commitlint/config-conventional": "^17.4.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": ">=5.43.0",
@@ -34,6 +38,7 @@
     "eslint-config-xo-typescript": "^0.55.1",
     "eslint-plugin-react": "^7.31.11",
     "gh-pages": "^4.0.0",
+    "husky": "^8.0.3",
     "typescript": ">=4.4",
     "vite": "^4.0.0"
   }
