--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.11.2",
     "@reduxjs/toolkit": "^1.9.1",
     "eslint-config-prettier": "^8.5.0",
+    "framer-motion": "^9.0.3",
     "prettier": "^2.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
